--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -33,7 +33,7 @@
 
 
 #menu{
-display: none;
+/*display: none;*/
 }
 
 .schedule-items.top .schedule .hours p{
@@ -57,6 +57,123 @@ display: none;
 
 </head>
 <body id ="waypointschild" class="planecursor">
+
+
+
+
+
+
+
+
+  <style type="text/css">
+    
+
+#menu.menu{
+display:none !important;
+}
+
+
+.cls-1widget {
+      fill: #49494a;
+    }
+
+    .cls-2widget {
+      fill: #fff;
+    }
+
+    .widget {
+      color: #fff;
+      width: 280px;
+      position: fixed;
+      right: 0;
+      bottom: 20px;
+      background: #f05d5b;
+      z-index: 1000;
+      padding: 10px;
+      border-radius: 10px 0 0 10px;
+      font-family: sans-serif;
+      text-align: center;
+      font-size: 12px;
+    }
+
+    @media only screen and (max-width: 992px) {
+      .widget {
+        display: none;
+      }
+    }
+
+    .action{
+      margin-top: -15px;
+    }
+  </style>
+  <div class="widget">
+    <a href="https://www.nadimama.com" target="_blank" aria-current="page"
+      class="router-link-exact-active router-link-active"><svg data-v-4ef0a45b="" id="header-logo" version="1.1"
+        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="257.1px"
+        height="69.9px" viewBox="0 0 257.1 69.9" xml:space="preserve" style="overflow: visible;">
+        <defs data-v-4ef0a45b=""></defs>
+        <g data-v-4ef0a45b="" id="Layer_2_1_">
+          <g data-v-4ef0a45b="" id="Layer_1-2_2_">
+            <polygon data-v-4ef0a45b="" points="59.7,45.2 69.9,35 59.7,24.7 59.7,10.2 45.2,10.2 35,0 24.7,10.2 10.2,10.2 10.2,24.7 0,35 10.2,45.2 10.2,59.7 
+			24.7,59.7 35,69.9 45.2,59.7 59.7,59.7 		" class="cls-1widget"></polygon>
+            <path data-v-4ef0a45b=""
+              d="M20.6,29.5l-0.3,0.2L16,28.9v23h3.3V38.1c0-2.6,1.5-5,3.8-6.2v-3.6C22.3,28.6,21.4,29,20.6,29.5z"
+              class="cls-2widget"></path>
+            <path data-v-4ef0a45b="" d="M43.5,27.8c-3.1,0-6,1.4-7.9,3.7l-0.7,0.9l-0.7-0.9c-1.2-1.5-2.8-2.6-4.6-3.2v3.6c2.3,1.2,3.8,3.6,3.8,6.2V52h3.3V38.1
+			c0-3.8,3.1-7,7-7s7,3.1,7,7V52h3.3V38.1C53.8,32.4,49.2,27.8,43.5,27.8L43.5,27.8z" class="cls-2widget"></path>
+            <path data-v-4ef0a45b="" d="M41.8,32.9v6.7h3.4v-6.7c-0.5-0.2-1.1-0.3-1.7-0.2C42.9,32.6,42.4,32.7,41.8,32.9z"
+              class="cls-2widget"></path>
+            <path data-v-4ef0a45b="" d="M45.2,26.5v-1.9c0-5.7-5.8-10.3-11.5-10.3c-2.2,0-3.1,0.7-4.8,2l-0.2,0.1l-4.1-0.8v23.9H28v-15c0.1-3.8,3.4-6.8,7.2-6.7
+			c3.6,0.1,6.5,3,6.7,6.7v1.9c0.6-0.1,1.1-0.1,1.7-0.1C44,26.4,44.5,26.4,45.2,26.5z" class="cls-2widget"></path>
+            <path data-v-4ef0a45b="" d="M86.7,25.2c-1.8,0-3.5,0.6-4.9,1.6l-3.5-0.7v18.1h3.5V33.6c0-2.7,2.2-4.9,4.9-4.9c2.7,0,4.9,2.2,4.9,4.9v10.6h3.5V33.7
+			C95.1,29,91.4,25.3,86.7,25.2z" class="cls-2widget"></path>
+            <polygon data-v-4ef0a45b="" points="142.7,44.2 146.2,44.2 146.2,27.2 142.7,27.9 		" class="cls-2widget">
+            </polygon>
+            <path data-v-4ef0a45b="" d="M137.9,20.4l-3.5,0.7v6.3c-4.1-3.3-10-2.7-13.3,1.4s-2.7,10,1.4,13.3c3.5,2.8,8.4,2.8,11.9,0v1.5l3.5,0.7V20.4z
+			 M128.5,40.7c-3.3,0-6-2.6-6-5.9s2.6-6,5.9-6c3.3,0,6,2.6,6,5.9v0.1C134.4,38,131.7,40.7,128.5,40.7z"
+              class="cls-2widget"></path>
+            <path data-v-4ef0a45b="" d="M146.6,22L146.6,22v-1.3h-1.3l-0.9-0.9l-0.9,0.9h-1.3V22l0,0l-0.9,0.9l0.9,0.9l0,0V25h1.3l0.9,0.9l0.9-0.9h1.3v-1.2
+			l0.9-0.9L146.6,22z" class="cls-2widget"></path>
+            <path data-v-4ef0a45b="" d="M117,44.2l-0.6-3.5v-14l-3.5,0.7c-1.7-1.4-3.8-2.1-6-2.1c-5.2,0.1-9.4,4.3-9.5,9.5c0,5.2,4.2,9.5,9.5,9.5h0.1h10V44.2z
+			 M101,34.8c0-1.6,0.6-3,1.8-4.1c1.1-1.1,2.6-1.8,4.2-1.8c3.3,0,6,2.6,6,5.9v6h-6C103.7,40.8,101,38.1,101,34.8z"
+              class="cls-2widget"></path>
+            <path data-v-4ef0a45b="" d="M176.3,25.4c-2.3,0-4.4,1-5.8,2.7c-2.5-3-6.8-3.6-10-1.5l-3.4-0.6v18.2h3.5V32.9c0-2.2,1.8-4.1,4.1-4s4.1,1.8,4,4.1v11.3
+			h3.5V32.9c0.1-2.2,2.1-4,4.3-3.8c2.1,0.1,3.8,1.8,3.8,3.9v11.3h3.5V33C183.9,28.8,180.5,25.4,176.3,25.4z"
+              class="cls-2widget"></path>
+            <path data-v-4ef0a45b="" d="M227.6,25.4c-2.3,0-4.4,1-5.8,2.7c-2.5-3-6.8-3.6-10-1.5l-3.4-0.6v18.2h3.5V32.9c0.1-2.2,2-4,4.3-3.8
+			c2.1,0.1,3.8,1.8,3.9,3.9v11.2l0,0v0.1h3.5V32.9c0.1-2.2,2.1-4,4.3-3.8c2.1,0.1,3.8,1.8,3.8,3.9v11.3h3.5V33
+			C235.2,28.8,231.8,25.4,227.6,25.4L227.6,25.4z" class="cls-2widget"></path>
+            <path data-v-4ef0a45b=""
+              d="M205.8,44.2l-0.6-3.5v-14l-3.5,0.7c-1.7-1.4-3.8-2.1-6-2.1c-5.2,0.1-9.4,4.3-9.5,9.5c0,5.2,4.2,9.5,9.5,9.5L205.8,44.2z
+			 M189.8,34.8c0-1.6,0.6-3,1.8-4.1c1.1-1.1,2.6-1.8,4.2-1.8c3.3,0,6,2.6,6,5.9v6h-6C192.4,40.7,189.8,38,189.8,34.8L189.8,34.8z"
+              class="cls-2widget"></path>
+            <path data-v-4ef0a45b=""
+              d="M257.1,44.2l-0.6-3.5v-14l-3.5,0.7c-1.7-1.4-3.8-2.1-6-2.1c-5.2,0.1-9.4,4.3-9.5,9.5c0,5.2,4.2,9.5,9.5,9.5h10.1V44.2z
+			 M241.1,34.8c0-1.6,0.6-3,1.8-4.1c1.1-1.1,2.6-1.8,4.2-1.8c3.3,0,5.9,2.7,6,5.9v6h-6C243.7,40.7,241.1,38,241.1,34.8L241.1,34.8z"
+              class="cls-2widget"></path>
+          </g>
+        </g>
+      </svg></a>
+     <!-- <div class="action">
+     
+    </div>-->
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <div class="hovers1">1</div>
 <div class="hovers2">2</div>
@@ -111,7 +228,7 @@ twitter
 {% includeJsFile "https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js" %}
 {% includeJsFile "js/main.js" %}
 
-<script>
+<!--<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -119,6 +236,26 @@ twitter
 
   ga('create', 'UA-97575832-1', 'auto');
   ga('send', 'pageview');
+
+</script>-->
+
+
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-97575832-1"></script>
+
+<script>
+
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag(){dataLayer.push(arguments);}
+
+  gtag('js', new Date());
+
+ 
+
+  gtag('config', 'UA-97575832-1');
 
 </script>
 
