--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -226,10 +226,10 @@ twitter
     </div>
     </div> -->
 
-<div class="contact-item upserve-click" style="position:relative;opacity:.25;pointer-events: none;">
+<div class="contact-item upserve-click" style="position:relative;" onClick="window.open('https://uqr.to/jcyg', '_blank');">
 <div class="contact-item-text for-tel">
-<!--<a href="tel:+12064578287">206 457 8287</a>-->
-<button class="upserve-olo-button upserve-olo-opener">upserve</button>
+<a href="https://uqr.to/jcyg" target="_blank">menu</a>
+<!--<button class="upserve-olo-button upserve-olo-opener">upserve</button>-->
 </div>
 </div>
 </div>
