--- a/public/css/style.css
+++ b/public/css/style.css
@@ -253,13 +253,15 @@ padding-top: -100px;
 
 .contact-item:nth-child(2){
   /* background-image: url(../img/SVG/join-waitlist.svg); */
-  background-image: url(../img/SVG/phone.svg);
+  /* background-image: url(../img/SVG/phone.svg); */
+  background-image: url(../img/SVG/menu.svg);
 }
 
 
 .contact-item:nth-child(2):hover{
   /* background-image: url(../img/SVG/join-waitlist-hover.svg); */
-  background-image: url(../img/SVG/phone-hover.svg);
+  /*  background-image: url(../img/SVG/phone-hover.svg); */
+  background-image: url(../img/SVG/menu-hover.svg);
 }
 
 
