--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -301,7 +301,7 @@ SevenroomsWidget.init({
 
 
 
-<script>
+<!-- <script>
 SevenroomsWidget2.init({
     venueId: "mbarseattle",
     triggerId: "sr-waitlist-root", // id of the dom element that will trigger this widget
@@ -309,7 +309,7 @@ SevenroomsWidget2.init({
     styleButton: false, // true if you are using the SevenRooms button
     previewWaitTimes: false // true if you are using the SevenRooms button & previewing wait times
 })
-</script>
+</script> -->
 
 
 
