--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -226,7 +226,7 @@ twitter
     </div>
     </div> -->
 
-<div class="contact-item upserve-click" style="position:relative;" onClick="window.open('https://uqr.to/jcyg', '_blank');">
+<div class="contact-item upserve-click" style="position:relative;" onclick='window.open("https://uqr.to/jcyg", "_blank");'>
 <div class="contact-item-text for-tel">
 <a href="https://uqr.to/jcyg" target="_blank">menu</a>
 <!--<button class="upserve-olo-button upserve-olo-opener">upserve</button>-->
