--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -347,7 +347,7 @@ $('#second-button').click(function(){
 
 	$('#link-2').click(function(){
 	
-	window.open("https://mbarseattle.tripleseat.com/party_request/10175", "_blank");
+//	window.open("https://mbarseattle.tripleseat.com/party_request/10175", "_blank");
 
 
 });
