--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -240,13 +240,12 @@ twitter
 
 <!-- contact items -->
 <section class="contact-items second-row" style="position:relative;padding-top: 0;">
-
+<!--
     <div style="display:none;">
 
-        <script src="https://api.tripleseat.com/v1/leads/ts_script.js?lead_form_id=10175&public_key=fa38cde99c9a8c2f46a97dd30b4174de73c774fc"></script><a id="tripleseat_link" href="https://www.tripleseat.com">Private Event Software powered by Tripleseat</a>
+       <script src="https://api.tripleseat.com/v1/leads/ts_script.js?lead_form_id=10175&public_key=fa38cde99c9a8c2f46a97dd30b4174de73c774fc"></script><a id="tripleseat_link" href="https://www.tripleseat.com">Private Event Software powered by Tripleseat</a>
 
-
-    </div>
+    </div>-->
 
         <div class="contact-items-container wider" style="margin-top:0;">
 <div style="width: 100%;text-align: center;font-family: AvenirLTStdthick;color: white;line-height:28px;">call us at <a href="tel:+12064578287" style="color: #ffffff">(206) 457-8287</a><br><!--place an order for pickup at mamnoon:--></div>
